2020-07-12:
	* update cursor location after writing to system console (kmw)

2020-07-11:
	* remap PIC, add skeleton IRQ handlers (kmw)
	* read system date and time from CMOS RTC (kmw)

2020-07-09:
	* added asm_[in, out]* functions (kmw)

2020-07-08:
	* fixed issue in bootloader (kmw)
	|> int 13h had been instructed to load beyond the 63 sector-per-track limit

2020-06-01:
	* kfree() will now join contiguous free blocks together (kmw)

2020-05-13:
	* added uitoa3() (kmw)
	|> this converts 64-bit unsigned integers (can be cast if shorter) to
	|> strings w/o needing dynamic memory allocation, which means it can be
	|> used before the mmu is initialized

2020-05-12:
	* added consWriteLine() (kmw)